--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
+// package.json
+
 {
-  "name": "local-camera",
+  "name": "webrtc-local",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"  // ← この行を追加！
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
-    "ws": "^8.18.3"
+    "express": "^4.19.2",
+    "ws": "^8.17.0"
   }
 }
