--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
   "name": "webrtc-local",
   "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
     "uuid": "^13.0.0",
